二叉搜索树补充

--- a/src/7_二叉搜索树/题目.md
+++ b/src/7_二叉搜索树/题目.md
@@ -2,3 +2,41 @@
 
 一个二叉搜索树，求其中的第 K 小的节点的值。
 如下图，第 3 小的节点是 `4`
+
+```js
+export type TreeNode = {
+  value: number
+  left: TreeNode | null
+  right: TreeNode | null
+}
+
+export const bst: TreeNode = {
+  value: 5,
+  left: {
+      value: 3,
+      left: {
+          value: 2,
+          left: null,
+          right: null
+      },
+      right: {
+          value: 4,
+          left: null,
+          right: null,
+      }
+  },
+  right: {
+      value: 7,
+      left: {
+          value: 6,
+          left: null,
+          right: null
+      },
+      right: {
+          value: 8,
+          left: null,
+          right: null
+      }
+  }
+}
+```
